Version 24    2013-November-14

--Fixed an obscure bug in frame timing caused by a sudden daylight savings time
  update while the game is running (next frame tries to wait an hour before
  being drawn).

--Fixed a bug that allowed the placement of multiple wives, kids, or vaults if
  you happen to be in the process of picking up one of these objects right when
  you are kicked out of editing your house for 5+ minutes of inactivity.
  Multiple vaults would result in your house being rejected by the server, but
  multiple wives or kids would end up being accepted by the server. (thanks 
  Joshua Collins and Ben Foster).

--Fixed potential death if user left house to view tapes immediately after
  backing out of a self-test, before the end_self_test was properly executed
  on the server.  Now Tapes button is hidden if there are pending background
  requests (thanks Joshua Collins).

--Pressing the + key in house edit mode and tape playback mode will now save
  the entire house map as a TGA image in the mapShots folder.

--Auctions button hidden if your house needs fixing (thanks Ben Foster).

--Position of paintings-stolen display moved down slightly to not overlap with
  end-of-robbery text.

--Fixed flicker in Tapes button after leaving a self-test.





Version 23   Live Server Fixes

--Changed server to forbid house check-in after edit with illegal family
  configuration (multiple wives, missing family members, etc.).

--Fixed to add house chills if user times out while robbing (or pulls the plug)
  when they were carrying no tools (thanks Ukuko).

--Fixed typo that lead to negative balances when a player sells tools from the
  vault to buy a painting and then quits the game (thanks Tyler Dahl).

--Listing or buying auctions blocked if your house needs fixing (thanks Ben
  Foster).





Version 23     2013-November-1

--Fixed lingering, unnoticed bug in power propagation when a power source is
  placed right above a voltaged-triggered switch (thanks Largestherb).